feat(builder): add Tag and Tool Material Builders.